CPU engine in process

--- a/GraphicsEngine/GraphicsEngine.csproj
+++ b/GraphicsEngine/GraphicsEngine.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="BitmapExtensions.cs" />
     <Compile Include="CameraBuilder.cs" />
+    <Compile Include="CPUEngine.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="ProjectionBuilder.cs" />
     <Compile Include="Resolution.cs" />
