--- a/TheGame/TheGame.csproj
+++ b/TheGame/TheGame.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Game.cs" />
+    <Compile Include="GameParameters.cs" />
     <Compile Include="ObjectParameters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
